--- a/about_me.html
+++ b/about_me.html
@@ -105,9 +105,9 @@
 										</header>
 										<p>I'm always excited to connect and collaborate with fellow data enthusiasts! Feel free to reach out using any of the methods below:</p>
 										<ul class="actions fit">
-											<li><a href="https://linkedin.com/in/kaitlyn-smith-31710a325" class="button small icon brands fa-linkedin">LinkedIn</a></li>
-											<li><a href="https://github.com/KaitlynB-Smith" class="button small icon brands fa-github">Github</a></li>
-											<li><a href="https://www.kaggle.com/kaitlynshsmith" class="button small icon brands fa-kaggle">Kaggle</a></li>
+											<li><a href="https://linkedin.com/in/kaitlyn-smith-31710a325" target="_blank" class="button small icon brands fa-linkedin">LinkedIn</a></li>
+											<li><a href="https://github.com/KaitlynB-Smith" target="_blank" class="button small icon brands fa-github">Github</a></li>
+											<li><a href="https://www.kaggle.com/kaitlynshsmith" target="_blank" class="button small icon brands fa-kaggle">Kaggle</a></li>
 										</ul>
 									</div>
 							</section>
